;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.3.11:
  * enhancement: on x86-64, compiled functions can not be moved (but can
    be freed) by GC. This facilitates examination of running images by
    external tools. Code locality and performance are improved as well.
  * bug fix: calling a named function (e.g. a DEFUN) concurrently with
    redefining that same function could lead to execution of random bytes.
  * bug fix: yes-or-no-p accepts formatter functions (lp#1639490)
  * bug fix: better handling of exceptions on macOS.

changes in sbcl-1.3.11 relative to sbcl-1.3.10:
  * minor incompatible change: SB-EXT:*INTEXP-MAXIMUM-EXPONENT* is removed.
  * enhancement: TRACE ... :REPORT {TRACE,NIL} now work as advertised in the
    documentation string (based on patch by Patrick Stein)
  * enhancement: support unboxed signed-word structure slots on x86, x86-64
    and ARM64. (lp#377616)
  * optimization: faster logical bit-array operations on multidimensional
    arrays.
  * optimization: better GC performance in the presence of many threads.
    (patch by Ilya Perminov, lp#1339924)
  * optimization: multiple-value-call is optimized with multiple argument
    forms, not just one. (lp#753803)
  * bug fix: MAKE-ALIEN-STRING returns the number of allocated bytes as a
    second value as advertised (reported by Johann 'Myrkraverk' Oskarsson)
  * bug fix: when TO-READTABLE is supplied to COPY-READTABLE, it will
    contain only the macros in FROM-READTABLE and no others. (lp#1631506)
  * enhancement: gencgc has been modified for x86-64 on Linux and macOS
    to a support mark-and-sweep as well as the traditional copying strategy.
    It is conceivable that some applications might be adversely affected.
    Please see ':immobile-space' in 'base-target-features.lisp-expr'
    for further details, and possible reasons to disable this feature.
  * enhancement: x86-64 supports shrinking the fixed overhead in a structure