@@ -87,7 +87,6 @@
 #+sb-fasteval (setq sb-ext:*evaluator-mode* :interpret)
 (sb-ext:save-lisp-and-die
  (progn
-   #+immobile-code (sb-kernel::choose-code-component-ordering)
    ;; See comment in 'reader.lisp'
    #+sb-unicode (setq sb-impl::*read-prefer-base-string* nil)
    ;; This is a base string since the flag wasn't set to NIL yet.
