@@ -262,6 +262,7 @@
             slot-makunbound
             make-load-form-saving-slots
             sb!ext:run-program
+            sb!kernel::choose-code-component-order
             sb!kernel:profile-deinit)
           ;; CLOS implementation
           '(sb!mop:class-finalized-p
