@@ -4,6 +4,9 @@ changes relative to sbcl-1.3.11:
   * enhancement: on x86-64, compiled functions can not be moved (but can
     be freed) by GC. This facilitates examination of running images by
     external tools. Code locality and performance are improved as well.
+  * enhancement: the docstring for SAVE-LISP-AND-DIE has been amended to
+    say that the :ROOT-STRUCTURES parameter is not meaningless on gencgc,
+    depending on the platform.
   * bug fix: calling a named function (e.g. a DEFUN) concurrently with
     redefining that same function could lead to execution of random bytes.
   * bug fix: yes-or-no-p accepts formatter functions (lp#1639490)
